# ProcessReaderC

./: .gitignore  CMakeLists.txt  README.md
cmocka-1.1.3/include/: cmocka.h
src/: main.c  processreader.c  processreader.h  queue.c  queue.h
test/: test.c  test_processreader.h  test_queue.h
